--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -5,8 +5,8 @@
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "background_color": "#eaedf8",
+  "theme_color": "#111826",
   "orientation": "portrait-primary",
   "categories": [
     "productivity",
