refactor(data): updated blog-posts as per design

--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -9,9 +9,9 @@
   "theme_color": "#111826",
   "orientation": "portrait-primary",
   "categories": [
-    "productivity",
-    "business",
-    "development"
+    "news",
+    "education",
+    "education"
   ],
   "icons": [
     {
